assets/stylesheets/common/common.scss
/* ... */
.chat-channels {
  .tag-chat-badge,
  .category-chat-badge,
  .topic-chat-badge {
    color: var(--primary-low-mid);
    display: flex;
    align-items: center;
    justify-content: center;

    .d-icon {
      height: 1.25em;
      width: 1.25em;
      margin: 0;
    }
  }

  .topic-chat-badge {
    .d-icon {
      z-index: 1;
    }
  }

  .category-chat-private .d-icon {
    background-color: var(--secondary);
    position: absolute;
    border-radius: 5px;
    padding: 3px 2px;
    color: var(--primary-high);
    height: 0.5em;
    width: 0.5em;
    left: calc(0.6125em + 6px);
    top: -4px;
  }
}

.chat-channel-archive-modal-inner {
  .chat-to-topic-selector {
    width: 500px;
    height: 300px;
  }

  .radios {
    margin-bottom: 10px;
    display: flex;
    flex-direction: row;

    .radio-label {
      margin-right: 10px;
    }
  }

  details {
    margin-bottom: 9px;
  }

  input[type="text"],
  .select-kit.combo-box.category-chooser {
    width: 100%;
  }
}

.chat-channel-archive-modal-inner {
  .chat-to-topic-selector {
    width: auto;
  }
}

.user-preferences .chat-setting .controls {
  margin-bottom: 0;
}

.create-channel-modal-modal {
  // I know `-modal-modal`.. but I like the JS file name
  .modal-inner-container {
    width: 500px;
  }
  .choose-topic-results-list {
    max-height: 200px;
    overflow-y: scroll;
  }
  .select-kit.combo-box,
  .create-channel-name-input,
  .create-channel-description-input,
  #choose-topic-title {
    width: 100%;
    margin-bottom: 0;
  }
  .category-chooser {
    .select-kit-selected-name.selected-name.choice {
      color: var(
        --primary-high
      ); // Make consistent with color of placeholder text when choosing topic
    }
  }

  .create-channel-hint {
    font-size: 0.8em;
    margin-top: 0.2em;
  }

  .create-channel-label,
  label[for="choose-topic-title"] {
    margin: 1em 0 0.35em;
  }
  .chat-channel-title {
    margin: 1em 0 0 0;
  }
}

.small-action {
  .open-chat {
    text-transform: uppercase;
    font-weight: 700;
    font-size-adjust: var(--font-down-0);
  }
}

.chat-message-collapser,
.chat-message-text {
  > p {
    margin: 0.5em 0 0.5em;
  }

  > p:first-of-type {
    margin-top: 0.1em;
  }

  > p:last-of-type {
    margin-bottom: 0.1em;
  }
}

.chat-live-pane .chat-composer .chat-composer-row .chat-composer-input {
  text-overflow: ellipsis;

  &:placeholder-shown {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

.reviewable-chat-message {
  .chat-channel-title {
    max-width: 100%;
  }
}

